cabal-version:      2.4
name:               AdventOfCode2022
version:            0.1.0.0
license:            MIT
copyright:          2022 Connor Fang
maintainer:         chfanghr@gmail.com
author:             Connor Fang
category:           Web
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , base                  >=4.13.0.0 && <4.18.0.0.0
    , megaparsec
    , mtl
    , optparse-applicative
    , parser-combinators
    , profunctors
    , relude                >=1.0
    , text

  hs-source-dirs:     src
  default-language:   Haskell2010

common exe-opts
  ghc-options: -threaded -O3

-- executable aoc2022
--   import:        shared, exe-opts
--   main-is:       Main.hs
--   build-depends: day1

-- library day1
--   import:          shared, exe-opts
--   exposed-modules: Day1
--   build-depends:   utils

-- library utils
--   import:          shared, exe-opts
--   exposed-modules:
--     Utils.Commands
--     Utils.Parsing

--   build-depends:

executable day2
  import:        shared, exe-opts
  main-is:       Day2/Main.hs
  build-depends: containers

executable day7
  import:        shared, exe-opts
  main-is:       Day7/Main.hs
  build-depends: containers

executable day10
  import:        shared, exe-opts
  main-is:       Day10/Main.hs
  build-depends:
    , containers
    , extra
    , safe

executable day11
  import:           shared, exe-opts
  main-is:          Day11/Main.hs
  build-depends:
    , array
    , composition-prelude
    , containers
    , extra
    , lens
    , safe

  other-extensions: DuplicateRecordFields
  other-modules:
    Day11.Business
    Day11.Input
    Day11.Monkey
    Day11.Types

executable day13
  import:        shared, exe-opts
  main-is:       Day13/Main.hs
  build-depends:
    , composition-prelude
    , timeit
